# actix-web-practice

./: Cargo.toml
src/: main.rs
templates/: img.html  index.html  tmp.html  upload.html  user.html  video_player.html
